2014-11-19  Per Bothner  <per@bothner.com>

	* bin/kawa.sh.in: Use KAWA_SHELL instead of SHELL variable.
	* configure.ac: Determine and export KAWA_SHELL.
	* build.xml (kawa.shell): New property.
	(kawa.sh): Substitute KAWA_SHELL based on kawa.shell property.

2014-11-19  Per Bothner  <per@bothner.com>

	* bin/kawa.sh.in: Use SHELL autoconf variable.
	* build.xml (kawa.sh): Substitute SHELL.

	* bin/kawa.sh.in: Simplify so kawa.sh only works for in-place running.
	* Makefile.am (install-binSCRIPTS): Use sed to munge KAWALIB in kawa.sh.
	* build.xml (kawa.sh): Simplify.

2014-11-19  Per Bothner  <per@bothner.com>

	* build.xml (kawa.sh): Build bin/kawa.sh from bin/kawa.sh.in.

2014-11-18  Per Bothner  <per@bothner.com>

	* configure.ac (AC_CONFIG_FILES): Add bin/kawa.sh.
	* Makefile.am (bin/kawa.sh): Remove rule.  Now generated by configure.
	(EXTRA_DST): Add bin/kawa.sh.in.

2014-11-17  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml (lib-scm-classes): Add quaternions.scm.

2014-10-28  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm-classes): Add remaining R7RS standard libraries.

2014-10-14  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.90.
	* build.xml (version.release): Likewise.

2014-09-28  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm-classes): Add new R7RS standard libraries.

2014-09-26  Per Bothner  <per@bothner.com>

	* build.xml: 'define-record-type' was moved from gnu.kawa.slib
	to kawa.lib.

2014-08-31  Per Bothner  <per@bothner.com>

	* Makefile.am: Each Makefile from gnu/expr, gnu/mapping, gnu/lists
	and gnu/text were merged into gnu/Makefile.
	* configure.ac: Likewise.

2014-08-28  Per Bothner  <per@bothner.com>

	* Makefile.am: Remove Makefiles from intermediate directories
	gnu/commonlisp gnu/xquery/gnu/q2.
	Fold Makefile in gnu/kawa/xslt into gnu directory.
	* configure.ac: Update accordingly.

2014-08-21  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm-classes): Add parameterize.scm.